src/test/deca/context/invalid/decaObjet/instanceof/08lowerOrEquals.deca
// Description:
//    instanceof dans une condition lower or equals
//
// Resultats:
//    08lowerOrEquals.deca:16:10:
//
// Historique:
//    cree le 17/06/2022

class A {}

{
    A a = new A();
    boolean b = true;

    if (b <= a instanceof A) {
        
    }
}